client type dimentions

--- a/Fetch1/app/clientType/clientType.html
+++ b/Fetch1/app/clientType/clientType.html
@@ -1,3 +1,22 @@
-﻿<button ng-click="page.load('customer/requestDelivery/requestDelivery.html');" class="button-base button-tall">Need something delivered</button>
-<br />
-<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="button-base button-tall">I want to deliver</button>
+﻿<div class="pad-tall"></div>
+<h1>
+	WELCOME: TODO
+	<br />
+	CHOOSE BELOW:
+</h1>
+<div class="pad-tall"></div>
+<button ng-click="page.load('customer/requestDelivery/requestDelivery.html');" class="button-base button-tall">
+	I WANT
+	<br />
+	SOMETHING
+	<br />
+	DELIVERED
+</button>
+<div class="pad-tall"></div>
+<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="button-base button-tall">
+	I WANT TO
+	<br />
+	DELIVER FOR
+	<br />
+	FETCH 1
+</button>
