themeing for page one complete

--- a/Fetch1/app/clientType/clientType.html
+++ b/Fetch1/app/clientType/clientType.html
@@ -1,11 +1,12 @@
-﻿<div class="pad-tall"></div>
+﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
+<div class="pad-tall"></div>
 <h1>
 	WELCOME: TODO
 	<br />
 	CHOOSE BELOW:
 </h1>
 <div class="pad-tall"></div>
-<button ng-click="page.load('customer/requestDelivery/requestDelivery.html');" class="button-base button-tall">
+<button ng-click="page.load('customer/requestDelivery/requestDelivery.html');" class="button-base button-tall light">
 	I WANT
 	<br />
 	SOMETHING
@@ -13,7 +14,7 @@
 	DELIVERED
 </button>
 <div class="pad-tall"></div>
-<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="button-base button-tall">
+<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="button-base button-tall dark">
 	I WANT TO
 	<br />
 	DELIVER FOR
