--- a/Fetch1/customer/deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/deliveredVerification/deliveredVerification.html
@@ -1,3 +1,3 @@
-﻿<button ng-click="page.load('app/loading/loading.html');">Rate your delivery</button>
+﻿<button ng-click="page.load('app/clientType/clientType.html');">Rate your delivery</button>
 <br />
-<button ng-click="page.load('app/loading/loading.html');">Exit</button>
+<button ng-click="page.load('app/clientType/clientType.html');">Exit</button>
