styles for delivery verification

--- a/Fetch1/app/clientType/clientType.html
+++ b/Fetch1/app/clientType/clientType.html
@@ -1,20 +1,20 @@
 ﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
-<div class="pad-tall"></div>
+<div class="medium"></div>
 <h1>
 	WELCOME: TODO
 	<br />
 	CHOOSE BELOW:
 </h1>
-<div class="pad-tall"></div>
-<button ng-click="page.load('customer/requestDelivery/requestDelivery.html');" class="button-base button-tall light">
+<div class="medium"></div>
+<button ng-click="page.load('customer/requestDelivery/requestDelivery.html');" class="tall widest light">
 	I WANT
 	<br />
 	SOMETHING
 	<br />
 	DELIVERED
 </button>
-<div class="pad-tall"></div>
-<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="button-base button-tall dark">
+<div class="medium"></div>
+<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="tall widest dark">
 	I WANT TO
 	<br />
 	DELIVER FOR
