--- a/Fetch1/customer/requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/requestDelivery/requestDelivery.html
@@ -1,20 +1,20 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; }}</div>
 <div ng-controller="DemoCtrl as demo">
-	<div class="pad-short"></div>
+	<div class="short"></div>
 	PACKAGE SIZE
 	<br />
-	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="button-base button-skinny dark">
+	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark">
 		S
 	</button>
-	<div class="space-small"></div>
-	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="button-base button-skinny dark">
+	<span class="skinniest"></span>
+	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark">
 		M
 	</button>
-	<div class="space-small"></div>
-	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="button-base button-skinny dark">
+	<span class="skinniest"></span>
+	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark">
 		L
 	</button>
-	<div class="pad-short"></div>
+	<div class="short"></div>
 	<div class="window">
 		<table style="width: 99%;">
 			<tr><td>PICKUP<br />ADDRESS	</td><td><input type="text" style="width: 100%;" /></td></tr>
@@ -22,21 +22,20 @@
 			<tr><td>WEIGHT				</td><td><input type="text" style="width: 100%;" /></td></tr>
 		</table>
 	</div>
-	<div class="pad-short"></div>
+	<div class="short"></div>
 	<div class="window">
 		<table style="width: 99%;">
 			<tr><td>DEL.<br />ADDRESS	</td><td><input type="text" style="width: 100%;" /></td></tr>
 		</table>
 	</div>
-	<div class="pad-short"></div>
-	<!--<button ng-click="page.load('customer/deliveryVerification/deliveryVerification.html');">Set Pickup Now</button>-->
-	<button class="button-base button-half dark">
+	<div class="short"></div>
+	<button class="wide dark">
 		SPECIAL
 		<br />
-		INSTRUCTIONS
+		INS.
 	</button>
-	<div class="space-small"></div>
-	<button ng-click="page.load('customer/deliveryVerification/deliveryVerification.html');" class="button-base button-half light">
+	<span class="skinnier"></span>
+	<button ng-click="page.load('customer/deliveryVerification/deliveryVerification.html');" class="wide light">
 		SET
 		<br />
 		DELIVERY
