--- a/Fetch1/customer/trackMap/trackMap.html
+++ b/Fetch1/customer/trackMap/trackMap.html
@@ -1,4 +1,6 @@
-﻿<img src="resources/icon/map.png" />
+﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
+<div class="short"></div>
+<img src="resources/icon/map.png" />
 <br />
 track package map
 <br />
