--- a/Fetch1/customer/deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/deliveredVerification/deliveredVerification.html
@@ -1,3 +1,7 @@
-﻿<button ng-click="page.load('app/clientType/clientType.html');">Rate your delivery</button>
-<br />
-<button ng-click="page.load('app/clientType/clientType.html');">Exit</button>
+﻿<div class="hidden">{{ page.theme = 'dark city'; }}</div>
+<div class="tall"></div>
+<div class="tall"></div>
+<div class="tall"></div>
+<button ng-click="page.load('app/clientType/clientType.html');" class="short wide stop">NO THANKS</button>
+<span class="skinnier"></span>
+<button ng-click="page.load('app/clientType/clientType.html');" class="short wide light">RATE</button>
