--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" ng-app="Fetch1App" ng-controller="PageCtrl as page" ng-class="page.theme">
 <head>
 	<meta charset="utf-8">
@@ -35,12 +35,12 @@
 			</div>
 		</div>
 	</nav>
-	<div id="content" class="slide-animate-container" ng-class="page.theme">
+	<div id="content" class="slide-animate-container">
 		<div class="slide-animate" ng-class="page.animateMore" ng-include="page.template">
 			<img class="center-h" src="resources/screen/startscreen.png" />
 		</div>
 	</div>
-	<footer ng-controller="DebugCtrl as debug" ng-class="page.theme">
+	<footer ng-controller="DebugCtrl as debug">
 		<div style="color: silver;">
 			{{ page.template }}
 		</div>
