font and title test

--- a/Fetch1/customer/requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/requestDelivery/requestDelivery.html
@@ -3,17 +3,11 @@
 	<div class="short"></div>
 	PACKAGE SIZE
 	<br />
-	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark">
-		S
-	</button>
+	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark fa fa-envelope"></button>
 	<span class="skinniest"></span>
-	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark">
-		M
-	</button>
+	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark fa fa-gift"></button>
 	<span class="skinniest"></span>
-	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark">
-		L
-	</button>
+	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark fa fa-bicycle"></button>
 	<div class="short"></div>
 	<div class="window">
 		<table style="width: 99%;">
@@ -35,7 +29,7 @@
 		INS.
 	</button>
 	<span class="skinnier"></span>
-	<button ng-click="page.load('customer/deliveryVerification/deliveryVerification.html');" class="wide light">
+	<button ng-click="page.load('customer/deliveryVerification/deliveryVerification.html', 'VERIFY SHIPMENT');" class="wide light">
 		SET
 		<br />
 		DELIVERY
