--- a/Fetch1/customer/deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/deliveryVerification/deliveryVerification.html
@@ -3,33 +3,25 @@
 	<div class="short"></div>
 	PLEASE VERIFY INFO FOR ACURACY
 	<div class="short"></div>
-	<button class="skinnier medium dark">
-		M
-	</button>
+	<button class="skinnier medium dark fa fa-archive"></button>
 	<span class="skinniest"></span>
 	<div class="window medium wider">
 		I have a small 10 lb package
 	</div>
 	<div class="short"></div>
-	<button class="skinnier medium dark">
-		V
-	</button>
+	<button class="skinnier medium dark fa fa-arrow-down"></button>
 	<span class="skinniest"></span>
 	<div class="window medium wider">
 		Package to be picked up from here ...
 	</div>
 	<div class="short"></div>
-	<button class="skinnier medium dark">
-		>
-	</button>
+	<button class="skinnier medium dark fa fa-arrow-right"></button>
 	<span class="skinniest"></span>
 	<div class="window medium wider">
 		Package will be delivered here ...
 	</div>
 	<div class="short"></div>
-	<button class="skinnier medium dark">
-		$
-	</button>
+	<button class="skinnier medium dark fa fa-usd"></button>
 	<span class="skinniest"></span>
 	<div class="window medium wider">
 		Estimated cost of shipment $...
@@ -39,7 +31,7 @@
 		EDIT
 	</button>
 	<span class="skinnier"></span>
-	<button ng-click="page.load('app/authentication/authenticateCustomer.html');" class="medium wide light">
+	<button ng-click="page.load('app/authentication/authenticateCustomer.html', 'FETCH1 LOGIN');" class="medium wide light">
 		SET/GO
 	</button>
 </div>
