--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -4,27 +4,30 @@
 	<meta charset="utf-8">
 	<title>Fetch1</title>
 
-	<!-- injected styles start -->
-	<link href="app/app.css?ver=201504052004" rel="stylesheet" />
-	<link href="app/authentication/authenticate.css?ver=201504052004" rel="stylesheet" />
-	<link href="app/page/animations.css?ver=201504052004" rel="stylesheet" />
+<!-- injected styles start -->
+	<link href="app/app.css?ver=201504052024" rel="stylesheet" />
+	<link href="app/authentication/authenticate.css?ver=201504052024" rel="stylesheet" />
+	<link href="app/page/animations.css?ver=201504052024" rel="stylesheet" />
 <!-- injected styles end -->
+
+	<link href="resources/fonts/font-awesome.css?ver=201503191839" rel="stylesheet" />
 
 	<script src="resources/scripts/angular.js?ver=201503191839"></script>
 	<script src="resources/scripts/angular-animate.js?ver=201503191839"></script>
+	<script src="resources/scripts/angular-touch.js?ver=201503191839"></script>
 	<script src="cordova.js?ver=201503191839"></script>
 	<script src="app/app.js?ver=201503191839"></script>
 
-	<!-- injected scripts start -->
-	<script src="cordova.js?ver=201504052004"></script>
-	<script src="app/authentication/authenticateController.js?ver=201504052004"></script>
-	<script src="app/devices/android.js?ver=201504052004"></script>
-	<script src="app/page/pageController.js?ver=201504052004"></script>
-	<script src="common/errorHandler/debugController.js?ver=201504052004"></script>
-	<script src="common/errorHandler/errorService.js?ver=201504052004"></script>
-	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201504052004"></script>
-	<script src="demo/demoController.js?ver=201504052004"></script>
-	<script src="demo/demoService.js?ver=201504052004"></script>
+<!-- injected scripts start -->
+	<script src="cordova.js?ver=201504052024"></script>
+	<script src="app/authentication/authenticateController.js?ver=201504052024"></script>
+	<script src="app/devices/android.js?ver=201504052024"></script>
+	<script src="app/page/pageController.js?ver=201504052024"></script>
+	<script src="common/errorHandler/debugController.js?ver=201504052024"></script>
+	<script src="common/errorHandler/errorService.js?ver=201504052024"></script>
+	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201504052024"></script>
+	<script src="demo/demoController.js?ver=201504052024"></script>
+	<script src="demo/demoService.js?ver=201504052024"></script>
 <!-- injected scripts end -->
 </head>
 <body>
@@ -32,7 +35,7 @@
 	<nav>
 		<div class="center-v-wrapper">
 			<div class="center-v-cell">
-				<button ng-click="page.back();" ng-disabled="page.disableBack" class="left-h">Back</button>TODO
+				<button ng-click="page.back();" ng-disabled="page.disableBack" class="left-h skinnier fa fa-arrow-left"></button>{{ page.title }}
 			</div>
 		</div>
 	</nav>
