fixed bad buton directs

--- a/Fetch1/customer/requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/requestDelivery/requestDelivery.html
@@ -3,11 +3,11 @@
 	<div class="short"></div>
 	PACKAGE SIZE
 	<br />
-	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark fa fa-envelope"></button>
+	<button class="medium skinnier dark fa fa-envelope"></button>
 	<span class="skinniest"></span>
-	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark fa fa-gift"></button>
+	<button class="medium skinnier dark fa fa-gift"></button>
 	<span class="skinniest"></span>
-	<button ng-click="page.load('app/authentication/authenticateDriver.html');" class="medium skinnier dark fa fa-bicycle"></button>
+	<button class="medium skinnier dark fa fa-bicycle"></button>
 	<div class="short"></div>
 	<div class="window">
 		<table style="width: 99%;">
