better title handling

--- a/Fetch1/app/authentication/authenticateCustomer.html
+++ b/Fetch1/app/authentication/authenticateCustomer.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.theme = 'dark'; }}</div>
+﻿<div class="hidden">{{ page.theme = 'dark'; page.title = 'FETCH1 LOGIN' }}</div>
 <div class="short"></div>
 LOGIN TO COMPLETE
 <div class="short"></div>
