--- a/Fetch1/customer/deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/deliveredVerification/deliveredVerification.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.theme = 'dark city'; }}</div>
+﻿<div class="hidden">{{ page.theme = 'dark city'; page.title = 'VERIFY SHIPMENT' }}</div>
 <div class="tall"></div>
 <div class="tall"></div>
 <div class="tall"></div>
