--- a/Fetch1/customer/deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/deliveryVerification/deliveryVerification.html
@@ -31,7 +31,7 @@
 		EDIT
 	</button>
 	<span class="skinnier"></span>
-	<button ng-click="page.load('app/authentication/authenticateCustomer.html', 'FETCH1 LOGIN');" class="medium wide light">
+	<button ng-click="page.load('app/authentication/authenticateCustomer.html');" class="medium wide light">
 		SET/GO
 	</button>
 </div>
