--- a/Fetch1/customer/deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/deliveryVerification/deliveryVerification.html
@@ -1,5 +1,5 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; }}</div>
-<div ng-controller="DemoCtrl as demo">
+<div ng-controller="AuthCtrl as auth">
 	<div class="short"></div>
 	PLEASE VERIFY INFO FOR ACURACY
 	<div class="short"></div>
@@ -27,11 +27,22 @@
 		Estimated cost of shipment $...
 	</div>
 	<div class="short right-t">I VERIFY THIS</div>
-	<button ng-click="page.back();" class=" medium wide stop">
+	<button ng-click="page.back();" class="medium wide stop">
 		EDIT
 	</button>
-	<span class="skinnier"></span>
-	<button ng-click="page.load('app/authentication/authenticateCustomer.html');" class="medium wide light">
+	<span class="skinniest"></span>
+	<!--<button ng-click="page.load('app/authentication/authenticateCustomer.html');" class="medium wide light">
 		SET/GO
-	</button>
+	</button>-->
+
+	<script joe-script src="https://checkout.stripe.com/checkout.js"
+			class="stripe-button light-blue dark"
+			data-key="{{ auth.publishableKey }}"
+			data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+			data-name="FETCH1 TRANSPORT LLC"
+			data-description="2 widgets"
+			data-zip-code="true"
+			data-amount="2000">
+	</script>
+
 </div>
