--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" ng-app="Fetch1App" ng-controller="PageCtrl as page" ng-class="page.theme">
 <head>
 	<meta charset="utf-8">
 	<title>Fetch1</title>
 
 <!-- injected styles start -->
-	<link href="app/app.css?ver=201504052024" rel="stylesheet" />
-	<link href="app/authentication/authenticate.css?ver=201504052024" rel="stylesheet" />
-	<link href="app/page/animations.css?ver=201504052024" rel="stylesheet" />
+	<link href="app/app.css?ver=201504121620" rel="stylesheet" />
+	<link href="app/authentication/authenticate.css?ver=201504121620" rel="stylesheet" />
+	<link href="app/page/animations.css?ver=201504121620" rel="stylesheet" />
 <!-- injected styles end -->
 
 	<link href="resources/fonts/font-awesome.css?ver=201503191839" rel="stylesheet" />
@@ -19,15 +19,15 @@
 	<script src="app/app.js?ver=201503191839"></script>
 
 <!-- injected scripts start -->
-	<script src="cordova.js?ver=201504052024"></script>
-	<script src="app/authentication/authenticateController.js?ver=201504052024"></script>
-	<script src="app/devices/android.js?ver=201504052024"></script>
-	<script src="app/page/pageController.js?ver=201504052024"></script>
-	<script src="common/errorHandler/debugController.js?ver=201504052024"></script>
-	<script src="common/errorHandler/errorService.js?ver=201504052024"></script>
-	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201504052024"></script>
-	<script src="demo/demoController.js?ver=201504052024"></script>
-	<script src="demo/demoService.js?ver=201504052024"></script>
+	<script src="cordova.js?ver=201504121620"></script>
+	<script src="app/authentication/authenticateController.js?ver=201504121620"></script>
+	<script src="app/devices/android.js?ver=201504121620"></script>
+	<script src="app/page/pageController.js?ver=201504121620"></script>
+	<script src="common/errorHandler/debugController.js?ver=201504121620"></script>
+	<script src="common/errorHandler/errorService.js?ver=201504121620"></script>
+	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201504121620"></script>
+	<script src="demo/demoController.js?ver=201504121620"></script>
+	<script src="demo/demoService.js?ver=201504121620"></script>
 <!-- injected scripts end -->
 </head>
 <body>
