submit payment test

--- a/Fetch1/customer/deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/deliveryVerification/deliveryVerification.html
@@ -35,14 +35,15 @@
 		SET/GO
 	</button>-->
 
-	<script joe-script src="https://checkout.stripe.com/checkout.js"
-			class="stripe-button light-blue dark"
-			data-key="{{ auth.publishableKey }}"
-			data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-			data-name="FETCH1 TRANSPORT LLC"
-			data-description="2 widgets"
-			data-zip-code="true"
-			data-amount="2000">
-	</script>
-
+	<form action="index.html" method="POST">
+		<script joe-script src="https://checkout.stripe.com/checkout.js"
+				class="stripe-button"
+				data-key="{{ auth.publishableKey }}"
+				data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+				data-name="FETCH1 TRANSPORT LLC"
+				data-description="2 widgets"
+				data-zip-code="true"
+				data-amount="2000">
+		</script>
+	</form>
 </div>
