--- a/Fetch1/customer/requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/requestDelivery/requestDelivery.html
@@ -1,37 +1,46 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; page.title = 'MY DELIVERY INFORMATION'; }}</div>
-<div ng-controller="DemoCtrl as demo">
+<div ng-controller="DemoCtrl as demo" ng-init="special=false;">
 	<div class="short"></div>
 	PACKAGE SIZE
 	<br />
-	<button class="medium skinnier dark fa fa-envelope"></button>
+	<button class="medium skinnier dark fa fa-envelope" ng-click="demo.setSize('small');" ng-class="demo.size==='small' ? 'selected' : 'x'"></button>
 	<span class="skinniest"></span>
-	<button class="medium skinnier dark fa fa-gift"></button>
+	<button class="medium skinnier dark fa fa-gift" ng-click="demo.setSize('medium');" ng-class="demo.size==='medium' ? 'selected' : 'x'"></button>
 	<span class="skinniest"></span>
-	<button class="medium skinnier dark fa fa-bicycle"></button>
+	<button class="medium skinnier dark fa fa-bicycle" ng-click="demo.setSize('large');" ng-class="demo.size==='large' ? 'selected' : 'x'"></button>
 	<div class="short"></div>
 	<div class="window">
 		<table style="width: 99%;">
-			<tr><td>PICKUP<br />ADDRESS	</td><td><input type="text" style="width: 100%;" /></td></tr>
-			<tr><td>CONTENTS			</td><td><input type="text" style="width: 100%;" /></td></tr>
-			<tr><td>WEIGHT				</td><td><input type="text" style="width: 100%;" /></td></tr>
+			<tr><td>PICKUP<br />ADDRESS	</td><td><input type="text" style="width: 100%;" ng-model="demo.pickup" ng-change="demo.setPickup()" /></td></tr>
+			<tr><td>CONTENTS			</td><td><input type="text" style="width: 100%;" ng-model="demo.content" ng-change="demo.setContent()" /></td></tr>
+			<tr><td>WEIGHT				</td><td><input type="text" style="width: 100%;" ng-model="demo.weight" ng-change="demo.setWeight()" /></td></tr>
 		</table>
 	</div>
 	<div class="short"></div>
 	<div class="window">
 		<table style="width: 99%;">
-			<tr><td>DEL.<br />ADDRESS	</td><td><input type="text" style="width: 100%;" /></td></tr>
+			<tr><td>DEL.<br />ADDRESS	</td><td><input type="text" style="width: 100%;" ng-model="demo.delivery" ng-change="demo.setDelivery()" /></td></tr>
 		</table>
 	</div>
 	<div class="short"></div>
-	<button class="wide dark">
-		SPECIAL
-		<br />
-		INS.
-	</button>
-	<span class="skinnier"></span>
 	<button ng-click="page.load('customer/deliveryVerification/deliveryVerification.html');" class="wide light">
 		SET
 		<br />
 		DELIVERY
 	</button>
+	<button class="wide dark" ng-click="special=true;" ng-hide="special">
+		SPECIAL
+		<br />
+		INS.
+	</button>
+	<div ng-show="special">
+		<div class="window">
+			<table style="width: 99%;">
+				<tr><td>INSTRUCTIONS	</td><td><textarea style="width: 100%;" ng-model="demo.instructions" ng-change="demo.setInstructions()" /></td></tr>
+			</table>
+		</div>
+		<div class="short"></div>
+	</div>
+	<span class="skinnier"></span>
+	<!--TODO move the set delivery button here-->
 </div>
