finished requestDelivery and deliveryVerification

--- a/Fetch1/customer/deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/deliveryVerification/deliveryVerification.html
@@ -36,7 +36,7 @@
 			SET/GO
 		</button>-->
 
-		<form action="index.html" method="POST">
+		<form action="index.html" method="POST" class="paymentPosition">
 			<script joe-script src="https://checkout.stripe.com/checkout.js"
 					class="stripe-button"
 					data-key="{{ auth.publishableKey }}"
