--- a/Fetch1/customer/requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/requestDelivery/requestDelivery.html
@@ -23,24 +23,27 @@
 		</table>
 	</div>
 	<div class="short"></div>
+	<div ng-show="special">
+		<div class="window">
+			<table style="width: 99%;">
+				<tr>
+					<td>INSTRUCTIONS	</td>
+					<td><textarea style="width: 100%;" ng-model="demo.instructions" ng-change="demo.setInstructions()"></textarea></td>
+				</tr>
+			</table>
+		</div>
+		<div class="short"></div>
+	</div>
 	<button ng-click="page.load('customer/deliveryVerification/deliveryVerification.html');" class="wide light">
 		SET
 		<br />
 		DELIVERY
 	</button>
+	<span class="skinnier"></span>
 	<button class="wide dark" ng-click="special=true;" ng-hide="special">
 		SPECIAL
 		<br />
 		INS.
 	</button>
-	<div ng-show="special">
-		<div class="window">
-			<table style="width: 99%;">
-				<tr><td>INSTRUCTIONS	</td><td><textarea style="width: 100%;" ng-model="demo.instructions" ng-change="demo.setInstructions()" /></td></tr>
-			</table>
-		</div>
-		<div class="short"></div>
-	</div>
-	<span class="skinnier"></span>
 	<!--TODO move the set delivery button here-->
 </div>
