some progress toward a map

--- a/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
@@ -32,11 +32,11 @@
 			EDIT
 		</button>
 		<span class="skinniest"></span>
-		<!--<button ng-click="page.load('app/authentication/authenticateCustomer.html');" class="medium wide light">
-			SET/GO
-		</button>-->
+		<button ng-click="page.load('app/3_trackMap/trackMap.html');" class="medium wide light">
+			Test Withoout Payment
+		</button>
 
-		<form action="index.html" method="POST" class="paymentPosition">
+		<form action="" method="POST" class="paymentPosition">
 			<script joe-script src="https://checkout.stripe.com/checkout.js"
 					class="stripe-button"
 					data-key="{{ auth.publishableKey }}"
