closer to a map

--- a/Fetch1/customer/3_trackMap/trackMap.html
+++ b/Fetch1/customer/3_trackMap/trackMap.html
@@ -1,9 +1,12 @@
 ﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
-<div class="short"></div>
-<img src="resources/icon/map.png" />
-<br />
-track package map
-<br />
-driver profile
-<br />
-<button ng-click="page.load('customer/4_deliveredVerification/deliveredVerification.html');">next</button>
+<div ng-controller="MapController as map">
+	<div class="short"></div>
+	<div id="map-canvas">
+	</div>
+	<br />
+	track package map
+	<br />
+	driver profile
+	<br />
+	<button ng-click="page.load('customer/4_deliveredVerification/deliveredVerification.html');">next</button>
+</div>
