--- a/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
@@ -32,8 +32,8 @@
 			EDIT
 		</button>
 		<span class="skinniest"></span>
-		<button ng-click="page.load('app/3_trackMap/trackMap.html');" class="medium wide light">
-			Test Withoout Payment
+		<button ng-click="page.load('customer/3_trackMap/trackMap.html');" class="medium wide light">
+			Test Without Payment
 		</button>
 
 		<form action="" method="POST" class="paymentPosition">
