--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -5,29 +5,31 @@
 	<title>Fetch1</title>
 
 <!-- injected styles start -->
-	<link href="app/app.css?ver=201504121620" rel="stylesheet" />
-	<link href="app/authentication/authenticate.css?ver=201504121620" rel="stylesheet" />
-	<link href="app/page/animations.css?ver=201504121620" rel="stylesheet" />
+	<link href="app/app.css?ver=201506232031" rel="stylesheet" />
+	<link href="app/authentication/authenticate.css?ver=201506232031" rel="stylesheet" />
+	<link href="app/page/animations.css?ver=201506232031" rel="stylesheet" />
 <!-- injected styles end -->
 
 	<link href="resources/fonts/font-awesome.css?ver=201503191839" rel="stylesheet" />
-
 	<script src="resources/scripts/angular.js?ver=201503191839"></script>
 	<script src="resources/scripts/angular-animate.js?ver=201503191839"></script>
 	<script src="resources/scripts/angular-touch.js?ver=201503191839"></script>
 	<script src="cordova.js?ver=201503191839"></script>
 	<script src="app/app.js?ver=201503191839"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
 <!-- injected scripts start -->
-	<script src="cordova.js?ver=201504121620"></script>
-	<script src="app/authentication/authenticateController.js?ver=201504121620"></script>
-	<script src="app/devices/android.js?ver=201504121620"></script>
-	<script src="app/page/pageController.js?ver=201504121620"></script>
-	<script src="common/errorHandler/debugController.js?ver=201504121620"></script>
-	<script src="common/errorHandler/errorService.js?ver=201504121620"></script>
-	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201504121620"></script>
-	<script src="demo/demoController.js?ver=201504121620"></script>
-	<script src="demo/demoService.js?ver=201504121620"></script>
+	<script src="cordova.js?ver=201506232031"></script>
+	<script src="app/authentication/authenticateController.js?ver=201506232031"></script>
+	<script src="app/devices/android.js?ver=201506232031"></script>
+	<script src="app/maps/mapService.js?ver=201506232031"></script>
+	<script src="app/page/pageController.js?ver=201506232031"></script>
+	<script src="common/errorHandler/debugController.js?ver=201506232031"></script>
+	<script src="common/errorHandler/errorService.js?ver=201506232031"></script>
+	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201506232031"></script>
+	<script src="customer/3_trackMap/trackMapController.js?ver=201506232031"></script>
+	<script src="demo/demoController.js?ver=201506232031"></script>
+	<script src="demo/demoService.js?ver=201506232031"></script>
 <!-- injected scripts end -->
 </head>
 <body>
