--- a/Fetch1/customer/3_trackMap/trackMap.html
+++ b/Fetch1/customer/3_trackMap/trackMap.html
@@ -1,8 +1,7 @@
 ﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
 <div ng-controller="MapController as map">
 	<div class="short"></div>
-	<div id="map-canvas">
-	</div>
+	<div id="map-canvas"></div>
 	<br />
 	track package map
 	<br />
