calculating distance, time and path

--- a/Fetch1/customer/3_trackMap/trackMap.html
+++ b/Fetch1/customer/3_trackMap/trackMap.html
@@ -7,5 +7,6 @@
 	<br />
 	driver profile
 	<br />
+	<button ng-click="map.calculateRoute('7652 dawn drive littleton co 80125', '7492 red fox way littleton co 80125');">test lookup</button>
 	<button ng-click="page.load('customer/4_deliveredVerification/deliveredVerification.html');">next</button>
 </div>
