--- a/Fetch1/app/clientType/clientType.html
+++ b/Fetch1/app/clientType/clientType.html
@@ -1,9 +1,7 @@
 ﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
 <div class="medium"></div>
 <h1>
-	WELCOME: TODO
-	<br />
-	CHOOSE BELOW:
+	WELCOME
 </h1>
 <div class="medium"></div>
 <button ng-click="page.load('customer/1_requestDelivery/requestDelivery.html');" class="tall widest light">
