--- a/Fetch1/customer/3_trackMap/trackMap.html
+++ b/Fetch1/customer/3_trackMap/trackMap.html
@@ -4,10 +4,10 @@
 		<div class="short"></div>
 		<div id="map-canvas"></div>
 		<br />
-		track package map
-		<br />
-		driver profile
-		<br />
-		<button ng-click="page.load('customer/4_deliveredVerification/deliveredVerification.html');">next</button>
+		<button class="wide dark" ng-click="page.load('customer/4_deliveredVerification/deliveredVerification.html');" ng-hide="special">
+			Click here when
+			<br />
+			Delivery Arrives
+		</button>
 	</div>
 </div>
