--- a/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
@@ -26,7 +26,7 @@
 			<button class="skinnier medium dark fa fa-usd"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Estimated cost of shipment {{ demo.price }}
+				Estimated cost of shipment ${{ demo.price }}
 			</div>
 			<div class="short right-t">I VERIFY THIS</div>
 			<button ng-click="page.back();" class="medium wide stop">
